<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:layout_editor_absoluteY="297dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_marginLeft="56dp"
            android:text="@string/tweets"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tuwaqicon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:srcCompat="@drawable/tuwaqicon"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="428dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/acountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="80dp"
            android:text="@string/acountname"
            app:layout_constraintStart_toStartOf="@id/tuwaqicon"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_marginRight="80dp"
            android:text="@string/twauqacademymention"
            app:layout_constraintStart_toStartOf="@id/tuwaqicon"
            app:layout_constraintTop_toBottomOf="@id/acountName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:text="@string/contenttext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mention" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tweet"
            app:srcCompat="@drawable/tuwaqpic"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="428dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/empty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/numRetweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/retweetsandlikes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <ImageButton
            android:id="@+id/textIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="90sp"
            android:layout_marginTop="5sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numRetweet"
            app:srcCompat="@drawable/txicon"
            tools:layout_editor_absoluteY="297dp" />

        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5sp"
            app:layout_constraintStart_toEndOf="@id/textIcon"
            app:layout_constraintTop_toBottomOf="@id/numRetweet"
            app:srcCompat="@drawable/repeat"
            tools:layout_editor_absoluteY="297dp" />

        <ImageButton
            android:id="@+id/favorate"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5sp"
            app:layout_constraintStart_toEndOf="@id/repeat"
            app:layout_constraintTop_toBottomOf="@id/numRetweet"
            app:srcCompat="@drawable/favoriteempty"
            tools:layout_editor_absoluteY="297dp" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5sp"
            app:layout_constraintStart_toEndOf="@id/favorate"
            app:layout_constraintTop_toBottomOf="@id/numRetweet"
            app:srcCompat="@drawable/share"
            tools:layout_editor_absoluteY="297dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>